--- a/Mod-4-Project/Mod-4-Project-backend/Gemfile
+++ b/Mod-4-Project/Mod-4-Project-backend/Gemfile
@@ -5,7 +5,6 @@ git_source(:github) do |repo_name|
   "https://github.com/#{repo_name}.git"
 end
 
-gem 'active_model_serializers'
 # Bundle edge Rails instead: gem 'rails', github: 'rails/rails'
 gem 'rails', '~> 5.1.6'
 # Use postgresql as the database for Active Record
@@ -17,15 +16,13 @@ gem 'puma', '~> 3.7'
 # Use Redis adapter to run Action Cable in production
 # gem 'redis', '~> 4.0'
 # Use ActiveModel has_secure_password
-gem 'bcrypt', '~> 3.1.7'
+# gem 'bcrypt', '~> 3.1.7'
 
 # Use Capistrano for deployment
 # gem 'capistrano-rails', group: :development
-gem 'simple_command'
 
 # Use Rack CORS for handling Cross-Origin Resource Sharing (CORS), making cross-origin AJAX possible
-gem 'rack-cors'
-gem 'jwt'
+# gem 'rack-cors'
 
 group :development, :test do
   # Call 'byebug' anywhere in the code to stop execution and get a debugger console
@@ -41,3 +38,22 @@ end
 
 # Windows does not include zoneinfo files, so bundle the tzinfo-data gem
 gem 'tzinfo-data', platforms: [:mingw, :mswin, :x64_mingw, :jruby]
+
+# Added at 2018-05-01 15:36:11 -0400 by graham.troyer-joy:
+gem "faker", "~> 1.8"
+
+# Added at 2018-05-01 15:38:29 -0400 by graham.troyer-joy:
+gem "bcrypt", "~> 3.1"
+
+# Added at 2018-05-03 10:56:14 -0400 by graham.troyer-joy:
+gem "jwt", "~> 2.1"
+
+# Added at 2018-05-03 11:13:34 -0400 by graham.troyer-joy:
+gem "dotenv-rails", "~> 2.4"
+
+# Added at 2018-05-03 11:28:56 -0400 by graham.troyer-joy:
+gem "pry", "~> 0.11.3"
+
+
+# Added at 2018-05-03 14:30:04 -0400 by graham.troyer-joy:
+gem "rack-cors", "~> 1.0"
